appId: ${APP_ID}
---
- openLink: "musikalokal://bookings"
- extendedWaitUntil:
    visible:
      id: "mobile-bookings-page"
    timeout: 60000
- tapOn:
    id: "mobile-bookings-tab-applicants"
- scrollUntilVisible:
    element:
      id: ${E2E_GIG_APPLICATION_CARD_ID}
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: ${E2E_GIG_APPLICATION_CARD_ID}
- scrollUntilVisible:
    element:
      id: ${E2E_GIG_APPLICATION_ACCEPT_ID}
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 100
    centerElement: true
- tapOn:
    id: ${E2E_GIG_APPLICATION_ACCEPT_ID}
    point: "50%,25%"
- extendedWaitUntil:
    visible:
      id: "app-modal-confirm-button"
    timeout: 60000
- tapOn:
    id: "app-modal-confirm-button"
