appId: ${APP_ID}
---
- openLink: "musikalokal://bookings"
- assertVisible:
    id: "mobile-bookings-page"
- tapOn:
    id: "mobile-bookings-tab-pending"
- scrollUntilVisible:
    element:
      id: ${E2E_GIG_APPLICATION_CARD_ID}
    direction: DOWN
- assertVisible:
    id: ${E2E_GIG_APPLICATION_CARD_ID}
- tapOn:
    id: ${E2E_GIG_APPLICATION_WITHDRAW_ID}
- tapOn:
    id: "app-modal-input"
- inputText: ${E2E_GIG_APPLICATION_WITHDRAW_REASON}
- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: "app-modal-confirm-button"
    timeout: 60000
- tapOn:
    id: "app-modal-confirm-button"
- tapOn:
    id: "app-modal-confirm-button"
    optional: true
